- Fixed scrollbar bug (#116)

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -76,10 +76,6 @@ ul li {
 }
 
 @media only screen and (max-width: 1280px) {
-  a {
-    overflow-y: auto;
-  }
-
   .about-header h1 {
     font-size: 2.2rem;
     overflow-y: auto;
